# react-native-track-player

./: README.md  package.json  react-native-track-player.podspec
android/: build.gradle
android/src/main/java/com/doublesymmetry/trackplayer/: TrackPlayer.kt
android/src/main/java/com/doublesymmetry/trackplayer/module/: MusicEvents.kt  MusicModule.kt
android/src/main/java/com/doublesymmetry/trackplayer/service/: AndroidCrossfadeEngine.kt  AndroidOrchestratedMediaSurface.kt  AndroidPlaybackOrchestrator.kt  AndroidTrackQueue.kt  MusicService.kt
android/src/main/jni/RNTrackPlayerSpec/: CMakeLists.txt  RNTrackPlayerSpec-generated.cpp  RNTrackPlayerSpec.h
android/src/main/res/values/: strings.xml
ios/RNTrackPlayer/: IOSCrossfadeCoordinator.swift  IOSPlaybackOrchestrator.swift  PlaybackCheckpointStore.swift  RNTrackPlayer.swift  RNTrackPlayerBridge.m  RNTrackPlayerTurboModule.mm
ios/RNTrackPlayer.xcodeproj/: project.pbxproj
ios/RNTrackPlayer/Utils/: EventType.swift
scripts/: verify-android-crossfade-contracts.js  verify-ios-crossfade-contracts.js  verify-player-lifecycle-contracts.js  verify-track-player-module-fallback.js
src/: NativeTrackPlayerModule.ts  TrackPlayerModule.ts  trackPlayer.ts
src/constants/: Event.ts
src/interfaces/: PlayerLifecycleState.ts  PlayerOptions.ts  index.ts
src/interfaces/events/: EventPayloadByEvent.ts  PlaybackCrossfadeStateEvent.ts  index.ts
src/types/: react-native-codegen.d.ts
web/TrackPlayer/: Player.ts
